bynkc/tests/fixtures/negative/408_is_refined_pattern/input.bynk
commons demo {
  fn f(x: Int) -> Bool {
    x is _ where NonNegative
  }
}
